<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgi">


    <LinearLayout
        android:id="@+id/lvtop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivlogosplash"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/logomap" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/pop_regular"
                android:text="@string/logincontinue"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_email"
                    android:tint="@color/login_image_bg" />

                <EditText
                    android:id="@+id/edemailid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:fontFamily="@font/pop_regular"
                    android:hint="@string/emailid"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_input_box_line"
                    android:textCursorDrawable="@drawable/cursor_black"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_password"
                    android:tint="@color/login_image_bg" />

                <EditText
                    android:id="@+id/edpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:fontFamily="@font/pop_regular"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_input_box_line"
                    android:textCursorDrawable="@drawable/cursor_black"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvforgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/pop_medium"
                android:text="@string/forgetpassword"
                android:visibility="invisible"
                android:textSize="@dimen/_11sdp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/shape_grey_curve_fill"
                android:fontFamily="@font/pop_regular"
                android:text="@string/login"
                android:foreground="?attr/selectableItemBackground"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvcontinuewith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/pop_medium"
                android:text="@string/continuewith"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:id="@+id/lvgoogleplus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape_red_curve_fill"
                android:clickable="true"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_weight="0.2"
                    android:adjustViewBounds="true"
                    android:clickable="false"
                    android:src="@drawable/ic_google_plus" />


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:background="@null"
                    android:clickable="false"
                    android:fontFamily="@font/pop_medium"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingRight="@dimen/_32sdp"
                    android:text="@string/google"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/sec_reg_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_reg_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pop_medium"
                android:text="@string/no_account"
                android:textColor="@color/login_create_acc_text"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvcreateaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/pop_semibold"
                android:text="@string/create_account"
                android:textColor="@color/login_sign_up_text"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/login_line" />


    </LinearLayout>

</RelativeLayout>