<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <RelativeLayout
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorPrimary"
        android:gravity="left"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivback"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_back" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/pop_semibold"
            android:text="@string/forgetpassword"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email"
                    android:tint="@color/login_image_bg" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edemailid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:fontFamily="@font/pop_regular"
                    android:gravity="center"
                    android:hint="@string/please_enter_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text"
                    android:textColorHint="@color/login_edit_text"
                    android:textCursorDrawable="@drawable/cursor_black"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/shape_grey_curve_fill"
                android:fontFamily="@font/pop_semibold"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"

                />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>