<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="@dimen/_550sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            card_view:cardBackgroundColor="@color/grey2"
            card_view:cardCornerRadius="@dimen/_5sdp"
            card_view:cardElevation="@dimen/_5sdp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/lvtopbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title_select"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/pop_medium"
                        android:gravity="center"
                        android:text="@string/sellect_role"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/input_box_line"></View>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvstudent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/pop_regular"
                    android:gravity="center"
                    android:text="@string/student"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:background="@color/input_box_line"></View>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvteacher"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/pop_regular"
                    android:gravity="center"
                    android:text="@string/teacher"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:background="@color/input_box_line"></View>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</LinearLayout>

